# eokas-base

./: .gitignore  CMakeLists.txt  README.md  beninja.json  build.sh  eokas-android.cmake  eokas-base.cmake  eokas-datapot-ui.cmake  eokas-datapot.cmake  eokas-gpu.cmake  eokas-math.cmake  eokas-native.cmake  eokas-rose.cmake  eokas-test-gpu.cmake  eokas-widgets.cmake  eokas.cmake
cmake/: eokas-app.cmake  eokas-base.cmake  eokas-rose-ui.cmake  eokas-test-gpu.cmake  eokas.cmake
shaders/: 001-triangle.hlsl  002-texture.hlsl
sln/vs2015/: libarchaism.sln
sln/vs2015/libarchaism/: libarchaism.vcxproj  libarchaism.vcxproj.filters
sln/vs2017/libarchaism/: libarchaism.vcxproj  libarchaism.vcxproj.filters
sln/xcode/libarchaism.xcodeproj/: project.pbxproj
sln/xcode12/archaism.xcodeproj/: project.pbxproj
src/: args.cpp  args.h  ascil.h  cli.cpp  cli.h  color.cpp  color.h  dataset.cpp  dataset.h  dll.cpp  dll.h  file.cpp  file.h  hash.cpp  hash.h  header.h  hom.cpp  hom.h  json.cpp  json.h  logger.cpp  logger.h  main.h  math.cpp  math.h  memory.cpp  memory.h  network.cpp  network.h  os.cpp  os.h  pixels.cpp  pixels.h  random.cpp  random.h  simd.cpp  simd.h  socket.cpp  socket.h  stream.cpp  (+8 more)
src/app/: app.cpp  app.h  config.cpp  config.h  header.h  module.cpp  module.h
src/base/: access.h  ascil.h  async.h  cli.cpp  cli.h  color.cpp  color.h  dataset.cpp  dataset.h  dll.cpp  dll.h  file.cpp  file.h  hash.cpp  hash.h  header.h  hom.cpp  hom.h  io.cpp  io.h  json.cpp  json.h  logger.cpp  logger.h  main.h  math.cpp  math.h  memory.h  network.cpp  network.h  os.cpp  os.h  pixels.cpp  pixels.h  pool.h  random.cpp  random.h  signal.h  simd.h  socket.cpp  (+10 more)
src/datapot/: Value.h  header.h  library.cpp  library.h  main.cpp  schema.cpp  schema.h  value.cpp  value.h
src/datapot-ui/: main.cpp  main.mm
src/datapot-ui/app/: app.cpp  app.h  controllers.cpp  controllers.h  logic.cpp  logic.h  menu.cpp  menu.h  models.cpp  models.h  views-library.h  views-main.cpp  views-main.h  views-object.cpp  views-object.h  views.cpp  views.h  window.cpp  window.h
src/datapot-ui/imgui/: imgui_demo.cpp  (+1 more)
src/gpu/: header.h  main.h
src/math/: color.h  math.cpp  math.h  random.cpp  random.h  simd.cpp  simd.h
src/native/: app.h  dll.cpp  dll.h  header.h  main.h  memory.cpp  memory.h  network.h  os.cpp  os.h  timer.h  utils.h  window.h
src/rose/: header.h  library.cpp  value.h
src/test-gpu/: App.cpp  Graphics.h  Utilities.h
src/widgets/: anchor.cpp  anchor.h  canvas.cpp  canvas.h  header.h  renderer.cpp  renderer.h  widgets.cpp  widgets.h
test/cases/: test_access.cpp  test_ascil.cpp  test_cli.cpp  test_hash.cpp  test_hom.cpp  test_json.cpp  test_os.cpp  test_time.cpp  test_timer.cpp
test/cases-base/: test_cli.cpp  test_hom.cpp  test_io.cpp  test_os.cpp  test_random.cpp
test/cases-eokas-base/: test_ascil.cpp
test/engine/: main.cpp  main.h
(+31 files in other folders)
